--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/common": "^6.11.11",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^6.11.11",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.11.11",
     "@nestjs/typeorm": "^7.1.0",
@@ -40,6 +41,7 @@
     "morgan": "^1.10.0",
     "nestjs-pgpromise": "^1.3.5",
     "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "request-ip": "^2.1.3",
@@ -51,6 +53,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
     "@types/express": "^4.16.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.7",
     "@typescript-eslint/parser": "^2.13.0",
