--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^10.12.18",
     "axios": "^0.20.0",
     "axios-retry": "^3.1.9",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
@@ -43,6 +44,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.12",
     "request-ip": "^2.1.3",
     "rxjs": "^6.3.3",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.16.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
