--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,14 @@
 # App port
 PORT=4001
 
+# Type ORM config
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=<username>
+TYPEORM_PASSWORD=<password>
+TYPEORM_DATABASE=bond-tokenization
+TYPEORM_PORT=5432
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_DROP_SCHEMA=false
+TYPEORM_LOGGING=false
+TYPEORM_ENTITIES=./dist/entities/*.entity.js
