--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "connect-redis": "^6.1.3",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.1",
     "express-openapi-validate": "^0.5.1",
+    "express-session": "^1.17.2",
     "file-type": "^15.0.1",
     "firebase-admin": "^9.2.0",
     "helmet": "^4.2.0",
@@ -45,19 +47,23 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "redis": "^4.0.4",
     "reflect-metadata": "^0.1.12",
     "request-ip": "^2.1.3",
     "rxjs": "^6.3.3",
     "typeorm": "^0.2.25",
-    "typescript": "^3.8.3",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.11.11",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "0.0.18",
     "@types/express": "^4.16.0",
+    "@types/express-session": "^1.17.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.7",
     "@typescript-eslint/parser": "^2.13.0",
     "concurrently": "^5.3.0",
